Convert GCTestHelper to Cleaner